--- a/sistema/site/public/css/sobre.css
+++ b/sistema/site/public/css/sobre.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Josefin Sans', sans-serif;
 }
 
 body {
     background: linear-gradient(135deg, #212229, #15161E);
     width: 100%;
     height: auto;
+    font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .container {
@@ -63,7 +63,7 @@ body {
 
 .text-sobre {
     width: 550px;
-    padding-top: 29px;
+    padding-top: 17px;
 }
 
 .main-sobre {
@@ -78,7 +78,6 @@ body {
     color: white;
     font-size: 75px;
     text-transform: capitalize;
-    margin-bottom: 20px;
 }
 
 .text-sobre h5 {
