--- a/sistema/site/public/css/dashboards.css
+++ b/sistema/site/public/css/dashboards.css
@@ -1,6 +1,6 @@
 /* pagina mural */
 
-*,
+/* *,
 body {
   font-family: "Exo 2", sans-serif;
 }
@@ -12,7 +12,7 @@ body {
 
 .dash-right .avisos {
   width: 100%;
-  /* border: 3px solid pink; */
+  /* border: 3px solid pink; 
   color: rgb(216, 216, 216);
   font-family: "Exo 2", sans-serif;
 }
@@ -42,7 +42,7 @@ body {
 
 .dash-right .avisos .div-form textarea {
   width: 100%;
-  /* color: #E6005A; */
+  /* color: #E6005A; 
   border: 3px solid #e6005a;
   background-color: white;
   border-radius: 5px;
@@ -59,7 +59,7 @@ body {
   color: white;
   background-color: #e6005a;
   width: 120px;
-}
+} */
 
 .publicacao-btn-editar {
   cursor: pointer;
@@ -117,7 +117,7 @@ body {
 }
 
 /* pagina graficos */
-
+/* 
 .dash-header {
   background-color: #212124;
 }
@@ -278,7 +278,7 @@ body {
 
 .display-block {
   display: block;
-}
+} */
 
 canvas {
   width: 100% !important;
