--- a/sistema/site/public/css/estilo.css
+++ b/sistema/site/public/css/estilo.css
@@ -6,6 +6,25 @@ body {
     box-sizing: border-box;
 }
 
+body::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+    background: orange;
+    /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: blue;
+    /* color of the scroll thumb */
+    border-radius: 20px;
+    /* roundness of the scroll thumb */
+    border: 3px solid orange;
+    /* creates padding around scroll thumb */
+}
+
 .container {
     display: flex;
     width: 80%;
