--- a/sistema/site/public/css/ranking.css
+++ b/sistema/site/public/css/ranking.css
@@ -124,7 +124,7 @@
     margin-top: 5%;
 }
 
-.tabela-ranking .titulos {
+.tabela-ranking .campos {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -132,14 +132,14 @@
     border-bottom: 2px solid black;
 }
 
-.tabela-ranking .titulos span {
+.tabela-ranking .campos span {
     width: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.tabela-ranking .infos {
+.tabela-ranking .resultados {
     display: flex;
     width: 100%;
     height: 100%;
@@ -147,11 +147,11 @@
     overflow: scroll;
 }
 
-.tabela-ranking .infos::-webkit-scrollbar {
+.tabela-ranking .resultados::-webkit-scrollbar {
     display: none;
 }
 
-.tabela-ranking .infos .nome,
+.tabela-ranking .resultados .nome,
 .acertos,
 .pontuacao,
 .jogador {
